deploy/mysql/php-admin.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: bitnami/phpmyadmin
          ports:
            - containerPort: 80
