deploy/mysql/php-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
