deploy/mysql/php-admin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  to:
    kind: Service
    name: phpmyadmin
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
