deploy/mysql/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  to:
    kind: Service
    name: mysql
    weight: 100
  port:
    targetPort: 3306
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
